<resources>
    <string name="app_name">Play Android</string>
    <string name="title_home">首页</string>
    <string name="title_wechat">公众号</string>
    <string name="title_project">项目</string>
    <string name="title_tree">知识体系</string>
    <string name="title_mine">我的</string>
    <string name="search">搜索</string>
    <string name="my_source">我的积分</string>
    <string name="my_collect">我的收藏</string>
    <string name="user_todo">待办清单</string>
    <string name="setting">系统设置</string>
    <string name="navigation">常用导航</string>


    <string name="network_unavailable_tip">网络连接不可用,请检查网络设置!</string>


</resources>
