<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"/>
    <item
        android:id="@+id/navigation_wechat"
        android:icon="@drawable/ic_wechat"
        android:title="@string/title_wechat"/>
    <item
        android:id="@+id/navigation_project"
        android:icon="@drawable/ic_project"
        android:title="@string/title_project"/>
    <item
        android:id="@+id/navigation_tree"
        android:icon="@drawable/ic_tree"
        android:title="@string/title_tree"/>

    <item
        android:id="@+id/navigation_mine"
        android:icon="@drawable/ic_mine"
        android:title="@string/title_mine"/>
</menu>
